posiGen_FullsendBox/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Appointment_Credit__c</fullName>
        <description>Field to track who takes credit for making the appointment, despite who enters it in Salesforce.</description>
        <label>Appointment Credit</label>
        <picklist>
            <picklistValues>
                <fullName>Salesperson</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appointment_Kept__c</fullName>
        <description>Was the Appointment Kept.</description>
        <inlineHelpText>Was the Appointment Kept.</inlineHelpText>
        <label>Appointment Kept</label>
        <picklist>
            <picklistValues>
                <fullName>Not Updated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appointment_Set_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>This is the date that the appointment was set.  It defaults to the day the appointment was created.</inlineHelpText>
        <label>Appointment Set Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appt_Creation_Time__c</fullName>
        <description>Appointment Creation Time</description>
        <label>Appt Creation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appt_Creation_Timeslot__c</fullName>
        <formula>if(Value(MID(Text(Appt_Creation_Time__c),12,2))+Value(MID(Text(Appt_Creation_Time__c),15,2))/60 &gt; 22, &quot;4pm to 6pm&quot;, 
if(Value(MID(Text(Appt_Creation_Time__c),12,2))+Value(MID(Text(Appt_Creation_Time__c),15,2))/60 &gt; 20, &quot;2pm to 4pm&quot;, 
if(Value(MID(Text(Appt_Creation_Time__c),12,2))+Value(MID(Text(Appt_Creation_Time__c),15,2))/60 &gt; 18, &quot;Noon to 2pm&quot;, 
if(Value(MID(Text(Appt_Creation_Time__c),12,2))+Value(MID(Text(Appt_Creation_Time__c),15,2))/60 &gt; 16, &quot;10am to Noon&quot;, 
if(Value(MID(Text(Appt_Creation_Time__c),12,2))+Value(MID(Text(Appt_Creation_Time__c),15,2))/60 &gt; 14, &quot;8am to 10am&quot;, 
if(Value(MID(Text(Appt_Creation_Time__c),12,2))+Value(MID(Text(Appt_Creation_Time__c),15,2))/60 &gt; 12, &quot;Before Hours&quot;, 
if(Value(MID(Text(Appt_Creation_Time__c),12,2))+Value(MID(Text(Appt_Creation_Time__c),15,2))/60 &gt; 2, &quot;After Hours&quot;, 
if(ISBLANK(Appt_Creation_Time__c), &quot;N/A&quot;,&quot;6pm to 8pm&quot;))))))))</formula>
        <label>Appt Creation Timeslot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Location__c</fullName>
        <formula>Owner:User.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Division__c</fullName>
        <formula>Owner:User.Division</formula>
        <label>Assigned to Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Recording_Link__c</fullName>
        <description>Displays a link to the call recording link in ContactWorld.</description>
        <formula>IF(CallObject = &quot;&quot;, &quot;&quot;, HYPERLINK(&quot;https://cloud17.contact-world.net/callcentre/callAnalytics/playaudiomatch.aspx?guid=&quot; &amp; CallObject &amp; &quot;&amp;start=0&amp;matched=&quot;, &quot;Call Recording&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click to access the call recording.</inlineHelpText>
        <label>Call Recording Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Role__c</fullName>
        <formula>IF(Owner:User.UserRole.Name = &quot;Billing&quot;,&quot;Collections&quot;,
IF(Owner:User.UserRole.Name = &quot;Telemarketing&quot;, &quot;Telemarketing&quot;,
IF(Owner:User.UserRole.Name = &quot;Concierge&quot;, &quot;Concierge&quot;,&quot;&quot;)))</formula>
        <label>Call Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Signed__c</fullName>
        <description>Whether or not the client signed up at their sales appointment.</description>
        <inlineHelpText>Did the client sign at this appointment?</inlineHelpText>
        <label>Client Signed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Committed_Date__c</fullName>
        <inlineHelpText>The day the customer promises to pay on.</inlineHelpText>
        <label>PTP Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <inlineHelpText>Field populated by a workflow rule</inlineHelpText>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_By_User_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Time_Zone__c</fullName>
        <label>Customer Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_Delinquent__c</fullName>
        <label>Days Delinquent</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 30</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>0 - 10</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>11 - 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31 - 60</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>61 - 90</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>91 - 120</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>121 - 150</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>151 - 180</fullName>
                <color>#FF6666</color>
            </picklistValues>
            <picklistValues>
                <fullName>181+</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_Last_Contacted__c</fullName>
        <formula>NOW()  - (CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Last Contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <description>copy through workflow of Activity Type</description>
        <label>Disposition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ACD__c</fullName>
        <description>The name of the ACD the call was delivered from</description>
        <label>ACD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_End_Time__c</fullName>
        <description>The time in Contact World that the call ended</description>
        <label>CW Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_Start_Time__c</fullName>
        <description>The time shown in Contact World when the call first hit your call plan</description>
        <label>CW Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallRingTimeInSeconds__c</fullName>
        <inlineHelpText>For Inbound, this is the time between the agent&apos;s phone ringing and the agent answering the call. For Outbound, this is the time between the customer&apos;s phone ringing and the customer answering the call. This value is rounded to the nearest second.</inlineHelpText>
        <label>Call Ring Time (s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallTalkTimeInSeconds__c</fullName>
        <inlineHelpText>For Inbound, this is the time the customer spent connected to an agent. For Outbound, this is the time between the customer answering their phone and the call ending. This value is rounded to the nearest second.</inlineHelpText>
        <label>Call Talk Time (s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ContactWorld_Number__c</fullName>
        <description>The contact world number relating to this call.  In the case of an inbound call this would be the number dialled by the caller.  For an outbound call this would be the number presented to the person being called.</description>
        <label>ContactWorld Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Customer_Number__c</fullName>
        <description>The customer number.  In the case of an inbound call this will be the calling line id.  For an outbound this will be the number that the agnet has called.</description>
        <label>Customer Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__InteractionQuality__c</fullName>
        <label>Interaction Quality</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Service_Name__c</fullName>
        <description>The service name that the call came from</description>
        <label>Service Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Was_Call_Recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Was Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVM_Call_Duration_Minutes__c</fullName>
        <formula>CallDurationInSeconds/60</formula>
        <label>NVM Call Duration Minutes</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVM_Unrelated_Task__c</fullName>
        <description>True if task is not related to an Opportunity or Account</description>
        <formula>AND(
 ISBLANK( WhatId ) ,
 ISBLANK( WhoId ) 
)</formula>
        <label>NVM Unrelated Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Kept_Reason__c</fullName>
        <inlineHelpText>Please select the reason that the sales appointment was not kept.</inlineHelpText>
        <label>Not Kept Reason</label>
        <picklist>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperwork Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Appointment_Type__c</fullName>
        <inlineHelpText>This is the initial appointment type.  It is only populated when the event is initially made.</inlineHelpText>
        <label>Original Appointment Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason_Not_Kept__c</fullName>
        <label>Other Reason Not Kept</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_reason__c</fullName>
        <description>Reason for not signing not in the picklist values</description>
        <label>Other reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>Collection Payment Recieved</description>
        <label>Payment Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_not_signing__c</fullName>
        <description>Reason the client did not sign at time of appointment.</description>
        <inlineHelpText>Why did the client not sign?</inlineHelpText>
        <label>Reason for not signing</label>
        <picklist>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease length</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wants proof of savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t like program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wanted to buy and did not qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided at this time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal/spousal disagreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not all homeowners present</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home needs repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperwork error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <formula>If(NVM_Unrelated_Task__c, &quot;No Object&quot;,
	If(isblank(WhoId),
		If(LEFT( WhatId , 3) = &quot;001&quot;,&quot;Account&quot;,
		If(LEFT( WhatId , 3)=&quot;006&quot;,&quot;Opportunity&quot;,
		If(LEFT( WhatId , 3)=&quot;500&quot;,&quot;Case&quot;,
		If(LEFT( WhatId , 3)=&quot;a3U&quot;,&quot;LD Lease&quot;,
		&quot;Undefined Object&quot;)))),
		If(LEFT( WhoId , 3)=&quot;00Q&quot;,&quot;Lead&quot;,
		If(LEFT( WhoId , 3)=&quot;003&quot;,&quot;Contact&quot;,
		&quot;Undefined Object&quot;))))</formula>
        <label>Related Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_What__c</fullName>
        <formula>LEFT(WhatId, 3)</formula>
        <label>Related What</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Who__c</fullName>
        <formula>IF(
  ISBLANK(WhoId),
    &quot;Undefined Object&quot;,
  IF(
    LEFT( WhoId, 3)=&quot;00Q&quot;,
      &quot;Lead&quot;, 
    IF(
      LEFT( WhoId, 3)=&quot;003&quot;, 
        &quot;Contact&quot;, 
    &quot;Undefined Object&quot;
    ) 
  ) 
)</formula>
        <label>Related Who</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>What area is the customer issue related to?</description>
        <inlineHelpText>What area is the customer issue related to?</inlineHelpText>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Liaison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resend_to_Contractors__c</fullName>
        <label>Resend to Contractors</label>
        <picklist>
            <picklistValues>
                <fullName>Carimi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KDH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Self_Originated_Sales_Appointment__c</fullName>
        <formula>AND(
 RecordType.Name = &quot;Sales Appointment&quot;,
 Owner:User.Username =  CreatedBy.Username )</formula>
        <label>Self-Originated Sales Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Creation_Time__c</fullName>
        <label>Task Creation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TempTypeID__c</fullName>
        <formula>RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TempTypeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Ownership_Details__c</fullName>
        <inlineHelpText>Provide as much detail regarding the ownership situation as possible to allow admin to research more.</inlineHelpText>
        <label>Unique Ownership Details</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_Last_7_Days</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Geopointe Activities (Last 7 Days)</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_all</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <label>Geopointe Activities (all)</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_today</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Geopointe Activities (today)</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>